Fix các bugs: